--- a/package.yaml
+++ b/package.yaml
@@ -1,36 +1,36 @@
-name:                telegram-types
-version:             0.2.1
-github:              "poscat0x04/telegram-types"
-license:             BSD3
-author:              "Poscat"
-maintainer:          "poscat@mail.poscat.moe"
-copyright:           "2020 Poscat"
+name: telegram-types
+version: 0.2.1
+github: "poscat0x04/telegram-types"
+license: BSD3
+author: "Poscat"
+maintainer: "poscat@mail.poscat.moe"
+copyright: "2020 Poscat"
 
 extra-source-files:
-- README.md
+  - README.md
 
 # Metadata used when publishing your package
-synopsis:            Types used in Telegram bot API
-category:            Web
+synopsis: Types used in Telegram bot API
+category: Web
 
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Defines various datatypes and their serialization methods useful for writing bindings to Telegram bot API.
+description: Defines various datatypes and their serialization methods useful for writing bindings to Telegram bot API.
 
 dependencies:
-- base                  >= 4.7       && < 5
-- text                  >= 1.2.4.0   && < 1.3
-- bytestring            >= 0.10.10.0 && < 0.11
-- filepath              >= 1.4.2.1   && < 1.5
-- aeson                 >= 1.4.7.1   && < 1.5
-- deriving-aeson        >= 0.2.3     && < 0.3
-- open-union            >= 0.4.0.0   && < 0.5
-- mime-types            >= 0.1.0.9   && < 0.2
-- servant               >= 0.16.2    && < 0.17
-- servant-multipart     >= 0.11.5    && < 0.12
-- lens                  >= 4.18.1    && < 4.19
-- generic-lens          >= 1.2.0.1   && < 1.3
+  - base                  >= 4.7       && < 5
+  - text                  >= 1.2.4.0   && < 1.3
+  - bytestring            >= 0.10.10.0 && < 0.11
+  - filepath              >= 1.4.2.1   && < 1.5
+  - aeson                 >= 1.4.7.1   && < 1.5
+  - deriving-aeson        >= 0.2.3     && < 0.3
+  - open-union            >= 0.4.0.0   && < 0.5
+  - mime-types            >= 0.1.0.9   && < 0.2
+  - servant               >= 0.16.2    && < 0.17
+  - servant-multipart     >= 0.11.5    && < 0.12
+  - lens                  >= 4.18.1    && < 4.19
+  - generic-lens          >= 1.2.0.1   && < 1.3
 
 library:
   source-dirs: src
@@ -39,6 +39,7 @@ library:
     - Web.Telegram.Types.Lens
     - Web.Telegram.Types.Stock
     - Web.Telegram.Types.Interaction
+    - Web.Telegram.Types.Passport
     - Web.Telegram.Types.Inline
     - Web.Telegram.Types.Input
     - Web.Telegram.Types.Update
@@ -46,11 +47,11 @@ library:
 
 tests:
   telegram-types-test:
-    main:                Spec.hs
-    source-dirs:         test
+    main: Spec.hs
+    source-dirs: test
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - telegram-types
+      - telegram-types
