--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,7 @@ dependencies:
   - servant-multipart     >= 0.11.5    && < 0.12
   - lens                  >= 4.18.1    && < 4.19
   - generic-lens          >= 1.2.0.1   && < 1.3
+  - hashable              ^>= 1.3.0.0
 
 library:
   source-dirs: src
