--- a/telegram-types.cabal
+++ b/telegram-types.cabal
@@ -1,6 +1,6 @@
 cabal-version:   3.0
 name:            telegram-types
-version:         0.1.0
+version:         1.0.0
 
 -- synopsis:
 -- description:
@@ -8,7 +8,7 @@ version:         0.1.0
 license:         BSD-3-Clause
 license-file:    LICENSE
 author:          Poscat
-maintainer:      Poscat <poscat@mail.poscat.moe>
+maintainer:      Poscat <poscat@poscat.moe>
 copyright:       Copyright (c) Poscat 2021
 stability:       alpha
 homepage:        https://github.com/poscat0x04/telegram-types
@@ -31,6 +31,7 @@ common common-attrs
     , optics-th
     , text
     , time
+    , template-haskell
 
   ghc-options:        -funbox-strict-fields
   default-language:   Haskell2010
